Fixed language tests